# demo-sls

./: .gitignore  Cargo.toml  handlerjs.js  handlerpy.py  lib.rs  package.json  serverless.yml
src/: main.rs
