[package]
name = "handlerwasm"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = "z"

[dependencies]
# wasm-bindgen = "0.2.78"
# js-sys = "0.3.55"
# aws_lambda_events = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
# serde-wasm-bindgen = "0.3.1"
serde_json = "1.0"
# web-sys = { version = "0.3.55", features = ["console"] }
tokio = { version = "1.15.0", features = ["macros"] }
lambda_http = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master"}
# lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master"}
